Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-949

Impalad crashes in DiskIoMgr::AddScanRanges

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3.1
    • Impala 1.3.1
    • None
    • None

    Description

      Stack Trace:

      (gdb) bt
      #0  0x00000038d98328a5 in raise () from /lib64/libc.so.6
      #1  0x00000038d9834085 in abort () from /lib64/libc.so.6
      #2  0x0000000001c46a09 in google::DumpStackTraceAndExit () at src/utilities.cc:147
      #3  0x0000000001c3e10d in google::LogMessage::Fail () at src/logging.cc:1296
      #4  0x0000000001c41b97 in google::LogMessage::SendToLog (this=0x7fab5d51dac0) at src/logging.cc:1250
      #5  0x0000000001c410f6 in google::LogMessage::Flush (this=0x7fab5d51dac0) at src/logging.cc:1119
      #6  0x0000000001c4202d in google::LogMessageFatal::~LogMessageFatal (this=0x7fab5d51dac0, __in_chrg=<value optimized out>)
          at src/logging.cc:1817
      #7  0x0000000000e2e6fe in impala::DiskIoMgr::ScanRange::InitInternal (this=0x51c6c80, io_mgr=0x5994000, reader=0x79563c0)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/runtime/disk-io-mgr-scan-range.cc:241
      #8  0x0000000000e1d86c in impala::DiskIoMgr::AddScanRanges (this=0x5994000, reader=0x79563c0, 
          ranges=std::vector of length 1, capacity 1 = {...}, schedule_immediately=true)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/runtime/disk-io-mgr.cc:423
      #9  0x0000000000e1eb95 in impala::DiskIoMgr::Read (this=0x5994000, reader=0x79563c0, range=0x51c6c80, buffer=0x70efb28)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/runtime/disk-io-mgr.cc:533
      #10 0x00000000012cc5f8 in impala::ScannerContext::Stream::GetNextBuffer (this=0x70efae0, read_past_size=0)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/scanner-context.cc:146
      #11 0x00000000012cd0bd in impala::ScannerContext::Stream::GetBytesInternal (this=0x70efae0, requested_len=1024, out_buffer=0x46c7ab0, 
          peek=false, out_len=0x46c7ac0)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/scanner-context.cc:222
      #12 0x000000000126f120 in impala::ScannerContext::Stream::GetBytes (this=0x70efae0, requested_len=1024, buffer=0x46c7ab0, 
          out_len=0x46c7ac0, status=0x7fab5d51e3d0, peek=false)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/scanner-context.inline.h:52
      #13 0x0000000001284cc6 in impala::HdfsTextScanner::FillByteBuffer (this=0x46c7a20, eosr=0x7fab5d51e3df, num_bytes=1024)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/hdfs-text-scanner.cc:282
      #14 0x0000000001283869 in impala::HdfsTextScanner::FinishScanRange (this=0x46c7a20)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/hdfs-text-scanner.cc:144
      #15 0x0000000001283349 in impala::HdfsTextScanner::ProcessSplit (this=0x46c7a20)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/hdfs-text-scanner.cc:76
      #16 0x000000000124ac64 in impala::HdfsScanNode::ScannerThread (this=0x52d0c00)
          at /data/1/jenkins/workspace/impala-master-64bit-multi/BUILD_TYPE/DEBUG/label/impala/repos/Impala/be/src/exec/hdfs-scan-node.cc:807
      #17 0x000000000125f329 in boost::_mfi::mf0<void, impala::HdfsScanNode>::operator() (this=0x7fab5d51ecd8, p=0x52d0c00)
          at /usr/include/boost/bind/mem_fn_template.hpp:49
      

      I'll update the JIRA with the location of the coredump abd binary.

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            ishaan Ishaan Joshi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: