IMPALA-949: Fix scan range initial queue capacity.

Change-Id: I289c61587da75b318ba5a543d31010920a9cffe9
Reviewed-on: http://gerrit.ent.cloudera.com:8080/2268
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins